# urbandictionary-rust

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  urban.rs
