[package]
name = "urban"
version = "1.0.0"
description = "Urban Dictionary API client"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/urbandictionary-rust"
repository = "https://github.com/thechampagne/urbandictionary-rust"
keywords = ["database", "urbandictionary", "api"]
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
urlencoding = "2.1.0"
reqwest = { version = "0.11", features = ["blocking"] }